--- a/www/theme/firekylin/res/css/article.css
+++ b/www/theme/firekylin/res/css/article.css
@@ -104,18 +104,19 @@ article pre {
     font-size: 14px;
     line-height: 1.6;
   color: #5d6a6a;
-  padding: 0.6em;
-  border-left:5px solid #ccc;
+  // padding: 0.6em;
+  // border-left:5px solid #ccc;
   word-break: break-all;
   word-wrap: break-word;
   white-space: pre-wrap;
   position: relative;
   overflow: hidden;
+  background: #f7f7f7;
 }
 
 article pre code{
   border-radius: 0 0 0 0 ;
-  background-color: transparent ;
+  background-color: #f7f7f7;
   border: 0 ;
   padding: 0;
   margin: 0;
