--- a/www/theme/firekylin/res/css/highlight.css
+++ b/www/theme/firekylin/res/css/highlight.css
@@ -6,7 +6,7 @@
  */
 .hljs {
   display: block;
-  background: white;
+  background: #F7F7F7;
   padding: 0.5em;
   color: #333333;
   overflow-x: auto;
