--- a/www/theme/firekylin/res/css/article.css
+++ b/www/theme/firekylin/res/css/article.css
@@ -90,13 +90,14 @@ article blockquote a{
 }
 
 article code {
-    font-family: "Consolas","Courier New",Courier,mono,serif;
+  font-family: "Consolas","Courier New",Courier,mono,serif;
   font-size: 80%;
   margin: 0 2px;
   padding: 4px 5px;
-  background-color: #f2f2f2;
+  background-color: #f9f2f4;
   vertical-align: middle;
   border-radius: 5px;
+  color: #c7254e;
 }
 
 article pre {    
